syntax = "proto3";

package com.joasasso.minitoolbox.data;

option java_package = "com.joasasso.minitoolbox.data";
option java_outer_classname = "CountryOuterClass";

message Country {
  string name = 1;
  string englishName = 2;
  string official = 3;
  string native = 4;
  string currency = 5;
  repeated string capital = 6;
  string phoneCode = 7;
  string flag = 8;
  int64 population = 9;
}

message CountryList {
  repeated Country countries = 1;
}
